# dotfiles

./: .gitignore  Mine.terminal  README.md  android_shortcuts.sh  applications.json  awk_one_liners.sh  bash_library.sh  bashrc  convenience_aliases.sh  ext_aliases.sh  ext_android.sh  ext_awk.sh  ext_ffmpeg.sh  ext_functions.sh  ext_git.sh  ext_handbrake.sh  ext_imagemagick.sh  ext_os_termux.sh  ext_ps1.sh  ffmpeg_shortcuts.sh  git_shortcuts.sh  handbrake_shortcuts.sh  helper_functions.sh  init.sh  install.sh  minimal_bashrc.sh  osx_shortcuts.sh  python_library.py  requirements-extra.txt  requirements-main.txt  requirements.txt  setup_brew.sh  setup_pi.sh  setup_termux.sh  termux_shortcuts.sh  util.sh  vimrc
bashrc.d/: 000.session.sh  001.paths.sh  002.aliases.sh  002.functions.sh  (+54 more)
python_applications/sitegen/: .gitignore  Makefile  pyproject.toml
python_applications/sitegen/src/sitegen/: config.py  sitegen.py
python_applications/sitegen/tests/: config_stories.toml
python_applications/sitegen/tests/public/: authors.html  index.html  stories.html  tags.html
python_applications/sitegen/tests/public/authors/: fiodor_dostoievski.html  h__c__andersen.html  rudyard_kipling.html
python_applications/sitegen/tests/public/story/: A_Story.html  An_Honest_Thief.html  How_The_Camel_Got_His_Hump.html  The_Dryad.html
python_applications/sitegen/tests/public/tags/: crime.html  custom_animal.html  custom_fairy_tales.html  fairy_tale.html  poetry.html  short_story.html
python_applications/sitegen/tests/stories/: A_Story.md  How The Camel Got His Hump.md  The_Dryad.md
(+25 files in other folders)
