[tool.poetry]
name = "sitegen"
version = "0.1.25"
description = ""
authors = ["Dominic Schaff <dominic@schaff.dev>"]
readme = "README.md"
packages = [
    { include = "sitegen", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
html2text = "2024.2.26"
markdown = "3.6.0"
markdown-full-yaml-metadata = "2.2.1"
htmlmin = "0.1.12"
readtime = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
isort = "5.13.2"
black = "24.3.0"

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99

[tool.poetry.scripts]
sitegen = "sitegen.sitegen:main"
